Fix Java version compatibility issues (Java 25 -> Java 17)
Co-authored-by: dj711-art <188714433+dj711-art@users.noreply.github.com>